Reestructura del backend